# CV

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  ex20
aula1/Example_01_Empty_Viewport/: WebGL_example_01.html
aula1/Example_02_Buttons/: WebGL_example_02.html
aula1/Example_03_Dropdown_List/: WebGL_example_03.html
aula1/Example_04_Keyboard/: WebGL_example_04.html
aula1/Example_05_Several_Viewports/: WebGL_example_05.html
aula11_/: CMakeCache.txt  Makefile  cmake_install.cmake  ex1  ex9
aula11_/aula11/: CMakeLists.txt  OpenCV_ex_01.cpp  OpenCV_ex_07.cpp  OpenCV_ex_09.cpp
aula12/: CMakeLists.txt  OpenCV_ex_13.cpp  OpenCV_ex_14.cpp  OpenCV_ex_15.cpp  OpenCV_ex_16.cpp  OpenCV_ex_17.cpp  OpenCV_ex_18.cpp
aula13/: CMakeLists.txt  ex20.cpp  ex21.cpp
aula2/Example_06_Triangle_Drawing/: WebGL_example_06.html
aula2/Example_07_WebGL_Primitives/: WebGL_example_07.html
aula2/Example_08_Adding_Colour/: WebGL_example_08.html
aula2/Example_09_Sierpinski_Gasket/: WebGL_example_09.html  square.html
aula3/Example_13_2D_Transformations/: WebGL_example_13.html
aula3/Example_14_2D_Transformations/: WebGL_example_14.html
aula3/Example_15_3D_Transformations/: WebGL_example_15.html
aula4/Example_16_3D_Models/: WebGL_example_16.js  piramide_triangular.txt
aula4/Example_17_3D_Projections/: WebGL_example_17.html  WebGL_example_17.js
aula7/Example_23_Phong_Illumination_CPU/: WebGL_example_23.js  models.js
aula8/Example_24_GPU_per_Vertex_Shading/: WebGL_example_24_GPU_per_vertex.js  lightSources.js
aula8/Example_NEW/: WebGL_example_NEW.js  (+1 more)
(+3 files in other folders)
