cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( ex13 OpenCV_ex_13.cpp )
add_executable( ex16 OpenCV_ex_16.cpp )
add_executable( ex14 OpenCV_ex_14.cpp )
add_executable( ex15 OpenCV_ex_15.cpp )
add_executable( ex17 OpenCV_ex_17.cpp )
add_executable( ex18 OpenCV_ex_18.cpp )
target_link_libraries( ex13 ${OpenCV_LIBS} )
target_link_libraries( ex16 ${OpenCV_LIBS} )
target_link_libraries( ex14 ${OpenCV_LIBS} )
target_link_libraries( ex15 ${OpenCV_LIBS} )
target_link_libraries( ex17 ${OpenCV_LIBS} )
target_link_libraries( ex18 ${OpenCV_LIBS} )

