cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( ex1 OpenCV_ex_01.cpp )
add_executable( ex7 OpenCV_ex_07.cpp )
add_executable( ex9 OpenCV_ex_09.cpp )
target_link_libraries( ex7 ${OpenCV_LIBS} )
target_link_libraries( ex9 ${OpenCV_LIBS} )
target_link_libraries( ex1 ${OpenCV_LIBS} )
